syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "via.sdj3.protobuf.order";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse);
}

message GrpcOrderItem {
  int32 id = 1;
  int32 customer_id = 2;
  google.protobuf.Timestamp orderDate = 3;
  double totalPrice = 4;
  string status = 5;
  int32 item_id = 6;
}

message CreateOrderRequest {
  int32 customerId = 1;
  google.protobuf.Timestamp orderDate = 2;
  double totalPrice = 3;
  string status = 4;
  int32 itemId = 5;
}

message CreateOrderResponse {
  GrpcOrderItem orderItem = 1;
}

message GetAllOrdersRequest {}

message GetAllOrdersResponse {
  repeated GrpcOrderItem orders = 1;
}
